Restaurer l'interface graphique basée sur Image.png